--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `Hallo Cantikku🫶
+      udahan yaa marahnya, maafin aku🙏
+      maaf suka bikin kamu cape karena egoisnya aku🥺
+      jangan lama-lama ngambeknya☺️
+      kita baikan lagi yaa?
+      I love You🥰`;
+      musik = `Musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
