--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>❤️</i>
-      <span>Klik love nya</span>
+      <span>Klik love nya sayangku</span>
     </div>
 
     <script>
@@ -29,7 +29,6 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       nomorWhatsapp = ``;
       idTelegram = ``;
 
-      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
