--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
       maaf suka bikin kamu cape karena egoisnya aku🥺
       jangan lama-lama ngambeknya☺️
       kita baikan lagi yaa?
-      I love You🥰`;
+      I love You reniku🥰`;
       musik = `Musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
