--- a/index.html
+++ b/index.html
@@ -15,20 +15,16 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>❤️</i>
-      <span>Klik love nya sayangku</span>
+      <span>Klik love nya</span>
     </div>
 
     <script>
-      ucapan = `Hallo Cantikku🫶
-      udahan yaa marahnya, maafin aku🙏
-      maaf suka bikin kamu cape karena egoisnya aku🥺
-      jangan lama-lama ngambeknya☺️
-      kita baikan lagi yaa?
-      I love You reniku🥰`;
-      musik = `Musik.mp3`;
+      ucapan = ``;
+      musik = ``;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
+      DekaTutorial(ucapan, musik, nomorWhatsapp, idTelegram);
     </script>
   </body>
 </html>
