--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>❤️</i>
-      <span>Klik love nya</span>
+      <span>Klik love nya sayangku</span>
     </div>
 
     <script>
-      ucapan = ``;
+      ucapan = `hallo cantikku🫶
+      Udahan dong marahnya, maafin aku🙏
+      Maaf bikin kamu cape karena egoisnya aku🥺
+      Jangan lama-lama yaa ngambeknya🤏
+      Baikan lagi yaa sayang🫰?
+      I Love you reniku🥰`;
       musik = ``;
       nomorWhatsapp = ``;
       idTelegram = ``;
