--- a/index.html
+++ b/index.html
@@ -15,12 +15,17 @@ Mau custom web ucapan online & tanpa watermark? Order Aja di Deka Tutorial !! (D
   <body>
     <div class="open">
       <i>❤️</i>
-      <span>Klik love nya</span>
+      <span>Klik love nya sayangku</span>
     </div>
 
     <script>
-      ucapan = ``;
-      musik = ``;
+      ucapan = `hallo cantikku
+      Udahan dong marahnya, maafin aku yaa🙏
+      Maaf bikin kamu cape karena egoisnya aku🥺
+      Jangan lama-lama yah ngambeknya🤏
+      Mau kan baikan lagi?🫰
+      I Love You Renikuu🥰`;
+      musik = `Musik.mp3`;
       nomorWhatsapp = ``;
       idTelegram = ``;
 
